--- a/TP1/public/index.html
+++ b/TP1/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
 
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <nav>
@@ -22,17 +24,29 @@
         <h1 class="text-4xl my-8 text-indigo-800">Cocktail Database</h1>
         <section>
             <h2 class="text-2xl mb-8 text-indigo-950">
+                Descripción de la API
+            </h2>
+            <p class="mb-16">
+                Esta API permite gestionar una base de datos de cocktails y bebidas. Permite realizar operaciones CRUD
+                (Crear, Leer, Actualizar y Borrar) sobre los recursos de cocktails y bebidas. La API está construida
+                utilizando Node.js y Express, y utiliza MongoDB como base de datos.
+            </p>
+            <h2 class="text-2xl mb-8 text-indigo-950">
                 Cocktails Endpoints
             </h2>
 
-            <ul class ="mb-16">
+            <ul class="mb-16">
                 <li class="py-4 border-b-2 border-slate-200">
-                    <span class="inline-flex items-center rounded-md bg-blue-50 px-2 py-1 text-xs font-medium text-blue-800 ring-1 ring-blue-600/20 ring-inset">GET</span>
-                    <a class="font-bold" href="/api/cocktails">/api/cocktails</a>   - Trae todos los cocktails de la base de datos. 
+                    <span
+                        class="inline-flex items-center rounded-md bg-blue-50 px-2 py-1 text-xs font-medium text-blue-800 ring-1 ring-blue-600/20 ring-inset">GET</span>
+                    <a class="font-bold" href="/api/cocktails">/api/cocktails</a> - Trae todos los cocktails de la base
+                    de datos.
                 </li>
                 <li class="py-4 border-b-2 border-slate-200">
-                    <span class="inline-flex items-center rounded-md bg-green-50 px-2 py-1 text-xs font-medium text-green-800 ring-1 ring-green-600/20 ring-inset">POST</span>
-                    <a class="font-bold" href="/api/users">/api/cocktails</a> - Agrega un nuevo cocktail a la base de datos. Ejemplo de estructura:
+                    <span
+                        class="inline-flex items-center rounded-md bg-green-50 px-2 py-1 text-xs font-medium text-green-800 ring-1 ring-green-600/20 ring-inset">POST</span>
+                    <a class="font-bold" href="/api/users">/api/cocktails</a> - Agrega un nuevo cocktail a la base de
+                    datos. Ejemplo de estructura:
                     <pre>
                         {
                             "iba": true,
@@ -51,13 +65,16 @@
                     </pre>
                 </li>
                 <li class="py-6 border-b-2 border-slate-200">
-                    <span class="inline-flex items-center rounded-md bg-blue-50 px-2 py-1 text-xs font-medium text-blue-800 ring-1 ring-blue-600/20 ring-inset">GET</span>
-                    <a class="font-bold" href="/api/cocktails/5">/api/cocktails/:id</a>  - Trae un cocktail por ID. 
+                    <span
+                        class="inline-flex items-center rounded-md bg-blue-50 px-2 py-1 text-xs font-medium text-blue-800 ring-1 ring-blue-600/20 ring-inset">GET</span>
+                    <a class="font-bold" href="/api/cocktails/5">/api/cocktails/:id</a> - Trae un cocktail por ID.
                 </li>
                 <li class="py-6 border-b-2 border-slate-200">
-                    <span class="inline-flex items-center rounded-md bg-yellow-50 px-2 py-1 text-xs font-medium text-yellow-800 ring-1 ring-yellow-600/20 ring-inset">PUT</span>
-                    <a class="font-bold" href="/api/cocktails">/api/cocktails/:id</a> - Modifica un cocktail en la base de datos por ID. Ejemplo de estructura (no es necesario cambiar todos los campos a la vez)
-                        <pre>
+                    <span
+                        class="inline-flex items-center rounded-md bg-yellow-50 px-2 py-1 text-xs font-medium text-yellow-800 ring-1 ring-yellow-600/20 ring-inset">PUT</span>
+                    <a class="font-bold" href="/api/cocktails">/api/cocktails/:id</a> - Modifica un cocktail en la base
+                    de datos por ID. Ejemplo de estructura (no es necesario cambiar todos los campos a la vez)
+                    <pre>
                         {
                             "iba": true,
                             "name": "Horse's Neck",
@@ -75,32 +92,50 @@
                     </pre>
                 </li>
                 <li class="py-6 border-b-2 border-slate-200">
-                    <span class="inline-flex items-center rounded-md bg-red-50 px-2 py-1 text-xs font-medium text-red-800 ring-1 ring-red-600/20 ring-inset">DELETE</span>
-                    <a class="font-bold" href="/api/cocktails">/api/cocktails/:id</a> - Borra un cocktail de la base de datos por ID. 
+                    <span
+                        class="inline-flex items-center rounded-md bg-red-50 px-2 py-1 text-xs font-medium text-red-800 ring-1 ring-red-600/20 ring-inset">DELETE</span>
+                    <a class="font-bold" href="/api/cocktails">/api/cocktails/:id</a> - Borra un cocktail de la base de
+                    datos por ID.
                 </li>
 
                 <li class="py-4 border-b-2 border-slate-200">
-                    <span class="inline-flex items-center rounded-md bg-blue-50 px-2 py-1 text-xs font-medium text-blue-800 ring-1 ring-blue-600/20 ring-inset">GET</span>
-                    <a class="font-bold" href="/api/cocktails/categories/all-day-cocktail">/api/cocktails/categories/:category</a> - Trae los cocktails de la base de datos, filtrados por categoria. Los nombres de las categorias en la URL se escriben en minusculas, las palabras se separan con un guion.
-                    <p>Los nombres de las categorias son: </p> 
+                    <span
+                        class="inline-flex items-center rounded-md bg-blue-50 px-2 py-1 text-xs font-medium text-blue-800 ring-1 ring-blue-600/20 ring-inset">GET</span>
+                    <a class="font-bold"
+                        href="/api/cocktails/categories/all-day-cocktail">/api/cocktails/categories/:category</a> - Trae
+                    los cocktails de la base de datos, filtrados por categoria. Los nombres de las categorias en la URL
+                    se escriben en minusculas, las palabras se separan con un guion.
+                    <p>Los nombres de las categorias son: </p>
                 </li>
-                                <li class="py-4 border-b-2 border-slate-200">
-                    <span class="inline-flex items-center rounded-md bg-blue-50 px-2 py-1 text-xs font-medium text-blue-800 ring-1 ring-blue-600/20 ring-inset">GET</span>
-                    <a class="font-bold" href="/api/cocktails/glasses/highball">/api/cocktails/glasses/:glass</a> - Trae los cocktails de la base de datos, filtrados por tipo de vaso. Los nombres de los vasos son:
+                <li class="py-4 border-b-2 border-slate-200">
+                    <span
+                        class="inline-flex items-center rounded-md bg-blue-50 px-2 py-1 text-xs font-medium text-blue-800 ring-1 ring-blue-600/20 ring-inset">GET</span>
+                    <a class="font-bold" href="/api/cocktails/glasses/highball">/api/cocktails/glasses/:glass</a> - Trae
+                    los cocktails de la base de datos, filtrados por tipo de vaso. Los nombres de los vasos son:
+                </li>
+                </li>
+                <li class="py-4 border-b-2 border-slate-200">
+                    <span
+                        class="inline-flex items-center rounded-md bg-blue-50 px-2 py-1 text-xs font-medium text-blue-800 ring-1 ring-blue-600/20 ring-inset">GET</span>
+                    <a class="font-bold" href="/api/cocktails/search?name=martini">api/cocktails/search?name</a> - Busca cocktail por nombre
                 </li>
             </ul>
 
             <h2 class="text-2xl mb-8 text-indigo-950">
                 Beverages Endpoints
             </h2>
-            <ul class ="mb-16">
+            <ul class="mb-16">
                 <li class="py-4 border-b-2 border-slate-200">
-                    <span class="inline-flex items-center rounded-md bg-blue-50 px-2 py-1 text-xs font-medium text-blue-800 ring-1 ring-blue-600/20 ring-inset">GET</span>
-                    <a class="font-bold" href="/beverages">/api/beverages</a> - Trae todas las bebidas de la base de datos. 
+                    <span
+                        class="inline-flex items-center rounded-md bg-blue-50 px-2 py-1 text-xs font-medium text-blue-800 ring-1 ring-blue-600/20 ring-inset">GET</span>
+                    <a class="font-bold" href="/beverages">/api/beverages</a> - Trae todas las bebidas de la base de
+                    datos.
                 </li>
                 <li class="py-4 border-b-2 border-slate-200">
-                    <span class="inline-flex items-center rounded-md bg-green-50 px-2 py-1 text-xs font-medium text-green-800 ring-1 ring-green-600/20 ring-inset">POST</span>
-                    <a class="font-bold" href="/api/beverages">/api/beverages</a> - Agrega una nueva bebida a la base de datos. Ejemplo de estructura del Objeto JSON:
+                    <span
+                        class="inline-flex items-center rounded-md bg-green-50 px-2 py-1 text-xs font-medium text-green-800 ring-1 ring-green-600/20 ring-inset">POST</span>
+                    <a class="font-bold" href="/api/beverages">/api/beverages</a> - Agrega una nueva bebida a la base de
+                    datos. Ejemplo de estructura del Objeto JSON:
                     <pre>
                         {
                             "name":"Vodka",
@@ -111,13 +146,17 @@
                     </pre>
                 </li>
                 <li class="py-6 border-b-2 border-slate-200">
-                    <span class="inline-flex items-center rounded-md bg-blue-50 px-2 py-1 text-xs font-medium text-blue-800 ring-1 ring-blue-600/20 ring-inset">GET</span>
-                    <a class="font-bold" href="/api/beverages/5">/api/beverages/:id</a>  - Trae una bebida por ID. 
+                    <span
+                        class="inline-flex items-center rounded-md bg-blue-50 px-2 py-1 text-xs font-medium text-blue-800 ring-1 ring-blue-600/20 ring-inset">GET</span>
+                    <a class="font-bold" href="/api/beverages/681d004699af07746c1cb9da">/api/beverages/:id</a> - Trae una bebida por ID.
                 </li>
                 <li class="py-6 border-b-2 border-slate-200">
-                    <span class="inline-flex items-center rounded-md bg-yellow-50 px-2 py-1 text-xs font-medium text-yellow-800 ring-1 ring-yellow-600/20 ring-inset">PUT</span>
-                    <a class="font-bold" href="/api/beverages">/api/beverages/:id</a> - Modifica una bebida en la base de datos por ID. Ejemplo de estructura del Objeto JSON: (no es necesario cambiar todos los campos a la vez)
-                        <pre>
+                    <span
+                        class="inline-flex items-center rounded-md bg-yellow-50 px-2 py-1 text-xs font-medium text-yellow-800 ring-1 ring-yellow-600/20 ring-inset">PUT</span>
+                    <a class="font-bold" href="/api/beverages">/api/beverages/:id</a> - Modifica una bebida en la base
+                    de datos por ID. Ejemplo de estructura del Objeto JSON: (no es necesario cambiar todos los campos a
+                    la vez)
+                    <pre>
                         {
                             _id":"681d004699af07746c1cb9da",
                             "name":"Vodka",
@@ -128,22 +167,27 @@
                     </pre>
                 </li>
                 <li class="py-6 border-b-2 border-slate-200">
-                    <span class="inline-flex items-center rounded-md bg-red-50 px-2 py-1 text-xs font-medium text-red-800 ring-1 ring-red-600/20 ring-inset">DELETE</span>
-                    <a class="font-bold" href="/api/beverages">/api/beverages/:id</a> - Borra una bebida de la base de datos por ID. 
+                    <span
+                        class="inline-flex items-center rounded-md bg-red-50 px-2 py-1 text-xs font-medium text-red-800 ring-1 ring-red-600/20 ring-inset">DELETE</span>
+                    <a class="font-bold" href="/api/beverages">/api/beverages/:id</a> - Borra una bebida de la base de
+                    datos por ID.
                 </li>
             </ul>
-           
+
             <h2 class="text-2xl mb-8 text-indigo-950">
                 Users Endpoints
             </h2>
-            <ul class ="mb-12">
+            <ul class="mb-12">
                 <li class="py-4 border-b-2 border-slate-200">
-                    <span class="inline-flex items-center rounded-md bg-blue-50 px-2 py-1 text-xs font-medium text-blue-800 ring-1 ring-blue-600/20 ring-inset">GET</span>
-                    <a class="font-bold" href="/api/users">/api/users</a> - Trae todos los usuarios de la base de datos. 
+                    <span
+                        class="inline-flex items-center rounded-md bg-blue-50 px-2 py-1 text-xs font-medium text-blue-800 ring-1 ring-blue-600/20 ring-inset">GET</span>
+                    <a class="font-bold" href="/api/users">/api/users</a> - Trae todos los usuarios de la base de datos.
                 </li>
                 <li class="py-4 border-b-2 border-slate-200">
-                    <span class="inline-flex items-center rounded-md bg-green-50 px-2 py-1 text-xs font-medium text-green-800 ring-1 ring-green-600/20 ring-inset">POST</span>
-                    <a class="font-bold" href="/api/users">/api/users</a> - Agrega un nuevo usuario a la base de datos. Ejemplo de estructura del Objeto JSON:
+                    <span
+                        class="inline-flex items-center rounded-md bg-green-50 px-2 py-1 text-xs font-medium text-green-800 ring-1 ring-green-600/20 ring-inset">POST</span>
+                    <a class="font-bold" href="/api/users">/api/users</a> - Agrega un nuevo usuario a la base de datos.
+                    Ejemplo de estructura del Objeto JSON:
                     <pre>
                         {
                             "name":"Sebastian",
@@ -153,13 +197,16 @@
                     </pre>
                 </li>
                 <li class="py-6 border-b-2 border-slate-200">
-                    <span class="inline-flex items-center rounded-md bg-blue-50 px-2 py-1 text-xs font-medium text-blue-800 ring-1 ring-blue-600/20 ring-inset">GET</span>
-                    <a class="font-bold" href="/api/users/5">/api/users/:id</a>  - Trae un usuario por ID. 
+                    <span
+                        class="inline-flex items-center rounded-md bg-blue-50 px-2 py-1 text-xs font-medium text-blue-800 ring-1 ring-blue-600/20 ring-inset">GET</span>
+                    <a class="font-bold" href="/api/users/681c7444fae49d65839fe219">/api/users/:id</a> - Trae un usuario por ID.
                 </li>
                 <li class="py-6 border-b-2 border-slate-200">
-                    <span class="inline-flex items-center rounded-md bg-yellow-50 px-2 py-1 text-xs font-medium text-yellow-800 ring-1 ring-yellow-600/20 ring-inset">PUT</span>
-                    <a class="font-bold" href="/api/users">/api/users/:id</a> - Modifica un usuario en la base de datos por ID. Ejemplo de estructura del Objeto JSON: (no es necesario cambiar todos los campos a la vez)
-                        <pre>
+                    <span
+                        class="inline-flex items-center rounded-md bg-yellow-50 px-2 py-1 text-xs font-medium text-yellow-800 ring-1 ring-yellow-600/20 ring-inset">PUT</span>
+                    <a class="font-bold" href="/api/users">/api/users/:id</a> - Modifica un usuario en la base de datos
+                    por ID. Ejemplo de estructura del Objeto JSON: (no es necesario cambiar todos los campos a la vez)
+                    <pre>
                         {
                             "_id":"681c7444fae49d65839fe219",
                             "name":"Sebastian",
@@ -169,16 +216,19 @@
                     </pre>
                 </li>
                 <li class="py-6 border-b-2 border-slate-200">
-                    <span class="inline-flex items-center rounded-md bg-red-50 px-2 py-1 text-xs font-medium text-red-800 ring-1 ring-red-600/20 ring-inset">DELETE</span>
-                    <a class="font-bold" href="/api/users">/api/users/:id</a> - Borra un usuario de la base de datos por ID. 
+                    <span
+                        class="inline-flex items-center rounded-md bg-red-50 px-2 py-1 text-xs font-medium text-red-800 ring-1 ring-red-600/20 ring-inset">DELETE</span>
+                    <a class="font-bold" href="/api/users">/api/users/:id</a> - Borra un usuario de la base de datos por
+                    ID.
                 </li>
             </ul>
-  
+
         </section>
-        
+
     </main>
     <footer>
         <p> Tatjana Blank - Aplicaiciones Híbridas - Docente: Jonathan Cruz - Comisión: DWT4AV</p>
     </footer>
 </body>
+
 </html>
