--- a/TP1/public/index.html
+++ b/TP1/public/index.html
@@ -48,7 +48,7 @@
                 <li class="py-4 border-b-2 border-slate-200">
                     <span
                         class="inline-flex items-center rounded-md bg-green-50 px-2 mr-2 py-1 text-xs font-medium text-green-800 ring-1 ring-green-600/20 ring-inset">POST</span>
-                    <a class="font-bold" href="/api/users">/api/cocktails</a> - Adds a new cocktail to the databe.
+                    <a class="font-bold" href="/api/cocktails">/api/cocktails</a> - Adds a new cocktail to the databe.
                     Example of JSON structure:
                     <pre>
                         {
@@ -70,7 +70,7 @@
                 <li class="py-6 border-b-2 border-slate-200">
                     <span
                         class="inline-flex items-center rounded-md bg-blue-50 px-2 mr-2 py-1 text-xs font-medium text-blue-800 ring-1 ring-blue-600/20 ring-inset">GET</span>
-                    <a class="font-bold" href="/api/cocktails/5">/api/cocktails/:id</a> - Fetched a cocktail by ID
+                    <a class="font-bold" href="/api/cocktails/681c865b8dbc33e71ff597ce">/api/cocktails/:id</a> - Fetched a cocktail by ID
                 </li>
                 <li class="py-6 border-b-2 border-slate-200">
                     <span
