--- a/TP2/frontend/public/index.html
+++ b/TP2/frontend/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/img/cocktail-home-illu.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -39,5 +39,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <footer>
+      <p>
+        &copy; 2025 Cocktail & Beverage Hub - Tatjana Blank - 25-1 - DWT4AV. All rights reserved.
+      </p>
   </body>
 </html>
