--- a/TP2/vite-frontend/index.html
+++ b/TP2/vite-frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/img/cocktail-home-illu.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vite-frontend</title>
+    <title>Cocktail and Beverage Hub</title>
   </head>
   <body>
     <div id="root"></div>
